Use Java 11's String.isBlank() method